--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@welldone-software/why-did-you-render": "^6.1.1",
     "date-fns": "^2.21.1",
     "firebase": "^8.4.1",
     "npm-run-all": "^4.1.5",
