--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@welldone-software/why-did-you-render": "^6.1.1",
+    "cuid": "^2.1.8",
     "date-fns": "^2.21.1",
     "firebase": "^8.4.1",
     "npm-run-all": "^4.1.5",
